# popcorn-time

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  ecosystem.config.js  startup.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: aws_ui.yml
popcorn-time-api/: .pre-commit-config.yaml  Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml  run.sh
popcorn-time-api/nginx/: nginx.dev.conf
popcorn-time-api/popcorn_api/: manage.py
popcorn-time-api/popcorn_api/authentication/: serializers.py  urls.py  views.py
popcorn-time-api/popcorn_api/config/: asgi.py  settings.py  wsgi.py
popcorn-time-api/popcorn_api/core/commands/: setup.py  starapp.py
popcorn-time-api/popcorn_api/movies/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  validators.py  views.py
popcorn-time-api/popcorn_api/movies/migrations/: 0001_initial.py  0002_alter_movie_year.py  0003_movie_plot_alter_movie_year.py  0004_alter_rating_rating.py  0005_rating_posted_at.py  0006_watchlist.py
popcorn-time-api/popcorn_api/popcorn_api/: asgi.py  settings.py  urls.py  wsgi.py
popcorn-time-ui/: .env.example  .eslintignore  .eslintrc.js  .gitignore  Dockerfile  next.config.js  package.json  tsconfig.json
popcorn-time-ui/.aws/: task-definition.json
popcorn-time-ui/src/api/: movies.ts  user.ts  watchlist.ts
popcorn-time-ui/src/interfaces/: index.ts  movies.ts  watch.ts
popcorn-time-ui/src/lib/: QueryClient.ts  Stores.tsx  api.ts  constants.ts  dayjs.ts  stores.tsx
(+32 files in other folders)
