[tool.poetry]
name = "popcorn-time-api"
version = "0.1.0"
description = "official PopcornTime api"
authors = ["Maykol Laguna <lagunamichael2@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
commitizen = "^2.24.0"
pytest = "^7.1.1"
pre-commit = "^2.18.1"
Faker = "^13.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
