[tool.poetry]
name = "popcorn-time-api"
version = "0.1.0"
description = "official PopcornTime api"
authors = ["Maykol Laguna <lagunamichael2@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
djangorestframework-simplejwt = "^5.1.0"
django-filter = "^21.1"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
commitizen = "^2.24.0"
pytest = "^7.1.1"
pre-commit = "^2.18.1"
Faker = "^13.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
